kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: shopsphere-ingress
  namespace: shopsphere

spec:

  ingressClassName: nginx

  rules:

  - host: shopsphere.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: frontend-service

            port:

              number: 80

      - path: /api

        pathType: Prefix

        backend:

          service:

            name: user-service

            port:

              number: 8000
